--- a/mapStyle.css
+++ b/mapStyle.css
@@ -1,18 +1,58 @@
+body {
+    font-family: 'ABeeZee', sans-serif;
+    background-color: #000;
+    background-image: linear-gradient(left top, rgb(153,153,153) 0%, rgb(0,0,0) 100%);
+    background-image: -o-linear-gradient(left top, rgb(153,153,153) 0%, rgb(0,0,0) 100%);
+    background-image: -moz-linear-gradient(left top, rgb(153,153,153) 0%, rgb(0,0,0) 100%);
+    background-image: -webkit-linear-gradient(left top, rgb(153,153,153) 0%, rgb(0,0,0) 100%);
+    background-image: -ms-linear-gradient(left top, rgb(153,153,153) 0%, rgb(0,0,0) 100%);
+
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        right bottom,
+        color-stop(0, rgb(153,153,153)),
+        color-stop(1, rgb(0,0,0))
+    );
+}
 #theCanvas {
 	position: absolute;
-	left: 0px;
-	top: 0px;
+	left: 0;
+	top: 0;
 }
-.tabs {
-  background-color:#E0E0E0;
-	color: blue;
-  cursor:pointer;
+.nohilite {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
+#tabsContainer{
+    padding: 5px;
+    background-color: #E0E0E0;
+    box-shadow: 15px 5px 15px -10px #000;
+}
+    #tabsContainer:hover{
+        background-color: #fff;
+    }
+    .tabs {
+        font-family: Helvetica, sans-serif;
+        cursor: pointer;
+        margin-right: 2px;
+        padding: 2px;
+    }
+        .tabs:hover{
+            color: #00f;
+            border-bottom: 1px solid #00f;
+        }
 table.tocTables {
-  width:100%;
-  background-color:white;
-  cursor:pointer;
-	border:0px solid white;
+    margin-top: 10px;
+    width: 100%;
+    background-color: #fff;
+    cursor: pointer;
+    border-top: 5px solid #000;
 }
 th.tocTables {
 	border:0px solid white;
@@ -175,12 +215,26 @@ th {
   overflow: auto;
 }
 #tocDiv {
-  border: 1px solid black; 
-  position: absolute; 
-  left: 5px; 
-  top: 5px;
-  overflow: auto;
-  background-color:#FFFFFF;
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    overflow: auto;
+    border: 1px solid #000;
+    box-shadow: inset -10px 0 40px -5px #bbb;
+    border-radius: 0 0 0 0.25em;
+    background-color: #E0E0E0;
+    background-image: linear-gradient(left , rgb(255,255,255) 0%, rgb(224,224,224) 100%);
+    background-image: -o-linear-gradient(left , rgb(255,255,255) 0%, rgb(224,224,224) 100%);
+    background-image: -moz-linear-gradient(left , rgb(255,255,255) 0%, rgb(224,224,224) 100%);
+    background-image: -webkit-linear-gradient(left , rgb(255,255,255) 0%, rgb(224,224,224) 100%);
+    background-image: -ms-linear-gradient(left , rgb(255,255,255) 0%, rgb(224,224,224) 100%);
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        color-stop(0, rgb(255,255,255)),
+        color-stop(1, rgb(224,224,224))
+    );
 }
 #readoutDiv {
   position: absolute; 
